--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,6 @@
-html {
+/* html {
     overflow-y: hidden;
-}
+} */
 
 html, body {
 	margin: 0;
